[package]
name = "listenbrainz"
description = "Listenbrainz API bindings"
license = "ISC"
version = "0.1.0"
authors = ["Luiz de Milon <luiz.de.milon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
serde_derive = "1.0.0"
chrono = "0.4.11"
